# typenx-core

./: .env.example  .gitignore  Cargo.toml  README.md
crates/typenx-addon-sdk-schema/: Cargo.toml
crates/typenx-addon-sdk-schema/src/: lib.rs
crates/typenx-core/: Cargo.toml
crates/typenx-core/src/: addons.rs  auth.rs  jobs.rs  lib.rs  library.rs  providers.rs  recommendations.rs  security.rs
crates/typenx-dev-server/: Cargo.toml
crates/typenx-dev-server/src/: main.rs
crates/typenx-server/: Cargo.toml
crates/typenx-server/src/: lib.rs  main.rs
crates/typenx-storage/: Cargo.toml
crates/typenx-storage/src/: lib.rs  memory.rs  mongo.rs  sql.rs
scripts/: dev-backend.ps1  dev-backend.sh  recommendation_gpu_smoke.py  requirements-ml.txt  train_recommendation_model.py
